# crossing-probability

./: .Rbuildignore  .gitignore  .lintr  DESCRIPTION  LICENSE.md  Makefile  NAMESPACE  README.md  build.sh  build_r_pkg.R  configure  configure.ac  env.yml
R/: RcppExports.R  crossing.probability.R  crossingprob.R  crossingprobability-package.R  crossingprobability.R  pkg.R
inst/: REFERENCES.bib
man/: crossing.prob.Rd  crossingprob.Rd
python_extension/: crossprob.cc  crossprob.py
src/: Makevars.in  Makevars.win  RcppExports.cpp  crossprob.cc  crossprob_mc.cc  ecdf1_mns2016.cc  ecdf1_new.cc  ecdf2.cc
tests/: testthat.R
tests/testthat/: test-crossingprob.R
